@@ -2,15 +2,14 @@
 autojags <- function(data,inits=NULL,parameters.to.save,model.file,n.chains,n.adapt=100,iter.increment=1000,n.burnin=0,n.thin=1,
                      save.all.iter=FALSE,modules=c('glm'),parallel=FALSE,DIC=TRUE,store.data=FALSE,codaOnly=FALSE,seed=floor(runif(1,1,10000)),
                     bugs.format=FALSE,Rhat.limit=1.1,max.iter=100000){
-  
-  if(n.chains<2){stop('Number of chains must be >2.')}
-  
+    
   #Set random seed
   RNGkind('default')
   set.seed(seed)
   
   #Pass input data and parameter list through error check / processing
-  data.check <- process.input(data,parameters.to.save,inits,n.chains,iter.increment,n.burnin,n.thin,DIC=DIC)
+  data.check <- process.input(data,parameters.to.save,inits,n.chains,(n.burnin + iter.increment),
+                              n.burnin,n.thin,DIC=DIC,autojags=TRUE,max.iter=max.iter)    
   data <- data.check$data
   parameters.to.save <- data.check$params
   inits <- data.check$inits
@@ -25,11 +24,11 @@ autojags <- function(data,inits=NULL,parameters.to.save,model.file,n.chains,n.ad
   
   #Parallel
   
-  cat('Iteration 1',' (',iter.increment,')',sep="")
+  cat('Burn-in + Update 1',' (',(n.burnin + iter.increment),')',sep="")
   
   if(parallel){
     
-    par <- run.parallel(data,inits,parameters.to.save,model.file,n.chains,n.adapt,n.iter=iter.increment,n.burnin,n.thin,
+    par <- run.parallel(data,inits,parameters.to.save,model.file,n.chains,n.adapt,n.iter=(n.burnin + iter.increment),n.burnin,n.thin,
                         modules,seed,DIC,verbose=FALSE) 
     samples <- par$samples
     mod <- par$model
@@ -40,7 +39,7 @@ autojags <- function(data,inits=NULL,parameters.to.save,model.file,n.chains,n.ad
     
     set.modules(modules,DIC)
     
-    rjags.output <- run.model(model.file,data,inits,parameters.to.save,n.chains,n.iter=iter.increment,n.burnin,n.thin,n.adapt,
+    rjags.output <- run.model(model.file,data,inits,parameters.to.save,n.chains,n.iter=(n.burnin + iter.increment),n.burnin,n.thin,n.adapt,
                               verbose=FALSE)
     samples <- rjags.output$samples
     mod <- rjags.output$m
@@ -49,17 +48,22 @@ autojags <- function(data,inits=NULL,parameters.to.save,model.file,n.chains,n.ad
   
   #Combine mcmc info into list
   n.samples <- (iter.increment-n.burnin) / n.thin * n.chains
-  mcmc.info <- list(n.chains,n.adapt,n.iter=iter.increment,n.burnin,n.thin,n.samples,time)
+  mcmc.info <- list(n.chains,n.adapt,n.iter=(n.burnin + iter.increment),n.burnin,n.thin,n.samples,time)
   names(mcmc.info) <- c('n.chains','n.adapt','n.iter','n.burnin','n.thin','n.samples','elapsed.mins')
   
   test <- test.Rhat(samples,Rhat.limit,codaOnly)
   reach.max <- FALSE
   index = 1
   
+  if(mcmc.info$n.iter>=max.iter){
+    reach.max <- TRUE
+    cat('\nMaximum iterations reached.\n\n')
+  }
+  
   while(test==TRUE && reach.max==FALSE){
         
     index <- index + 1
-    cat('Iteration ',index,' (',mcmc.info$n.iter + iter.increment,')',sep="")
+    cat('Update ',index,' (',mcmc.info$n.iter + iter.increment,')',sep="")
     
     if(save.all.iter){
       if(index==2){start.iter <- start(samples)}
@@ -71,7 +75,7 @@ autojags <- function(data,inits=NULL,parameters.to.save,model.file,n.chains,n.ad
     if(parallel){
       
       par <- run.parallel(data=NULL,inits=NULL,parameters.to.save=parameters.to.save,model.file=NULL,n.chains=n.chains
-                          ,n.adapt=n.adapt,n.iter=iter.increment,n.burnin=0,n.thin=n.thin,modules=modules,
+                          ,n.adapt=0,n.iter=iter.increment,n.burnin=0,n.thin=n.thin,modules=modules,
                           seed=seed,DIC=DIC,model.object=mod,update=TRUE,verbose=FALSE) 
       
       if(save.all.iter & index > 1){
@@ -79,6 +83,7 @@ autojags <- function(data,inits=NULL,parameters.to.save,model.file,n.chains,n.ad
       } else {samples <- par$samples}
       
       mod <- par$model
+      
       test <- test.Rhat(samples,Rhat.limit,codaOnly)
       
     } else {
@@ -86,7 +91,7 @@ autojags <- function(data,inits=NULL,parameters.to.save,model.file,n.chains,n.ad
       set.modules(modules,DIC)
       
       rjags.output <- run.model(model.file=NULL,data=NULL,inits=NULL,parameters.to.save=parameters.to.save,
-                                n.chains=n.chains,n.iter=iter.increment,n.burnin=0,n.thin,n.adapt,
+                                n.chains=n.chains,n.iter=iter.increment,n.burnin=0,n.thin,n.adapt=0,
                                 model.object=mod,update=TRUE,verbose=FALSE)
       
       if(save.all.iter & index > 1){
@@ -94,7 +99,9 @@ autojags <- function(data,inits=NULL,parameters.to.save,model.file,n.chains,n.ad
       } else {samples <- rjags.output$samples}
 
       mod <- rjags.output$m
+
       test <- test.Rhat(samples,Rhat.limit,codaOnly)
+
      
     }
     
