@@ -1,3 +1,7 @@
+# Changes from Version 1.3.4 to 1.3.5 [26-Mar-2015] #
+
+Fix problem with max.iter argument in autojags(). Clarify documentation and output for autojags().
+
 # Changes from Version 1.3.3 to 1.3.4 [21-Mar-2015] #
 
 Add option save.all.iter in autojags() function to combine MCMC samples from all iterative updates into final posterior.
